<package format="2">
  <name>knee_assembly_v1</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for knee_assembly_v1</p>
    <p>This package contains configuration data, 3D models and launch files
for knee_assembly_v1 robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>